--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --port 3000",
+    "start": "webpack serve --port 3000 --host 0.0.0.0 --https",
     "build": "webpack"
   },
   "repository": {
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/pagetribe/back-on-track#readme",
   "dependencies": {
     "leaflet": "^1.7.1",
-    "leaflet.locatecontrol": "^0.72.2"
+    "leaflet.locatecontrol": "^0.72.2",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
